# libPerm

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  checks.yml
cmake/: compiler.cmake  dependencies.cmake
docs/: README.md  libPerm.tex  sources.bib
examples/: CMakeLists.txt  README.md  permutation_group_basics.cpp  permutations_as_value_types.cpp  permutations_basics.cpp  permute_lists.cpp
include/libperm/: AbstractPermutation.hpp  AbstractPermutationGroup.hpp  Cycle.hpp  DiminoAlgorithm.hpp  ExplicitPermutation.hpp  Permutation.hpp  PermutationContainer.hpp  PrimitivePermutationGroup.hpp  SpecialGroups.hpp  Utils.hpp
include/libperm/details/: ContiguousIterator.hpp  ExplicitPermutation.hpp  SignedPermutation.hpp  UnsignedPermutation.hpp
src/: AbstractPermutation.cpp  AbstractPermutationGroup.cpp  CMakeLists.txt  Cycle.cpp  DiminoAlgorithm.cpp  ExplicitPermutation.cpp  Permutation.cpp  PrimitivePermutationGroup.cpp
src/details/: ExplicitPermutation.cpp  SignedPermutation.cpp
tests/: CMakeLists.txt  PermutationGroupTest.hpp  PermutationTest.hpp  StreamOperators.hpp  TestCycle.cpp  TestDiminoAlgorithm.cpp  TestExplicitPermutation.cpp  TestPermutationGroupInterface.cpp  TestPermutationInterface.cpp  TestPrimitivePermutationGroup.cpp  TestSpecialGroups.cpp  TestUtils.cpp
tests/Cycle/: CMakeLists.txt  TestCycle.cpp
tests/Dimino/: CMakeLists.txt  TestDiminoAlgorithm.cpp
tests/ExplicitPermutation/: CMakeLists.txt  TestExplicitPermutation.cpp
tests/Misc/: CMakeLists.txt
tests/PermutationContainer/: CMakeLists.txt  TestPermutationContainer.cpp
tests/PrimitivePermutationGroup/: CMakeLists.txt  TestPrimitivePermutationGroup.cpp
